--- a/index.html
+++ b/index.html
@@ -45,147 +45,77 @@
 <h2>
 <a id="proyectos" class="anchor" href="#proyectos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proyectos</h2>
 
-<p>Esta es la lista de proyectos disponibles: <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201420/projects.md">click</a>.</p>
-
 <h2>
 <a id="programa" class="anchor" href="#programa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
-<a id="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
+<a id="semana-1-enero-23" class="anchor" href="#semana-1-enero-23" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 1) Enero 23</h3>
 
 <ul>
-<li>Jaime E. Forero-Romero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/ForeroRomero_intro.pdf?raw=true">¿Cómo funciona astrolunch?</a>
+<li>Jaime Forero. Cómo funciona Astrolunch.</li>
+</ul>
+
+<h3>
+<a id="semana-2-enero-30" class="anchor" href="#semana-2-enero-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Enero 30</h3>
+
+<ul>
+<li>Jaime Forero.</li>
+<li>Verónica Arias.</li>
+<li>Juan Nicolás Garavito</li>
+</ul>
+
+<h3>
+<a id="semana-3-febrero-6" class="anchor" href="#semana-3-febrero-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 3) Febrero 6</h3>
+
+<ul>
+<li><strong>Elección de proyectos</strong></li>
+</ul>
+
+<h3>
+<a id="semana-4-febrero-13" class="anchor" href="#semana-4-febrero-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Febrero 13</h3>
+
+<h3>
+<a id="semana-5-febrero-20" class="anchor" href="#semana-5-febrero-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Febrero 20</h3>
+
+<h3>
+<a id="semana-6-febrero-27" class="anchor" href="#semana-6-febrero-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Febrero 27</h3>
+
+<h3>
+<a id="semana-7-marzo-6" class="anchor" href="#semana-7-marzo-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Marzo 6</h3>
+
+<h3>
+<a id="semana-8-marzo-13" class="anchor" href="#semana-8-marzo-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Marzo 13</h3>
+
+<ul>
+<li><strong>Entrega de informe de avance del proyecto</strong></li>
+</ul>
+
+<h3>
+<a id="semana-9-marzo-20" class="anchor" href="#semana-9-marzo-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Marzo 20</h3>
+
+<h3>
+<a id="semana-10-marzo-27" class="anchor" href="#semana-10-marzo-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Marzo 27</h3>
+
+<h3>
+<a id="semana-11-abril-10" class="anchor" href="#semana-11-abril-10" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Abril 10</h3>
+
+<h3>
+<a id="semana-12-abril-17" class="anchor" href="#semana-12-abril-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Abril 17</h3>
+
+<h3>
+<a id="semana-13-abril-24" class="anchor" href="#semana-13-abril-24" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Abril 24</h3>
+
+<h3>
+<a id="semana-14-mayo-1" class="anchor" href="#semana-14-mayo-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Mayo 1</h3>
+
+<h3>
+<a id="semana-15-mayo-9" class="anchor" href="#semana-15-mayo-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Mayo 9</h3>
+
+<ul>
+<li>
+<strong>Presentación de los resultados del proyecto en forma de poster</strong><br>
 </li>
-<li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
-<li>Jaime E. Forero-Romero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/ForeroRomero_heidelberg_tallin.pdf?raw=true">Haciendo amigos en Heidelberg y Tallin</a>
-</li>
 </ul>
-
-<h3>
-<a id="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
-
-<ul>
-<li>Jaime E. Forero-Romero. Arte y Astronomía.</li>
-<li>Felipe Gómez. Cosmología y Galaxias en Madrid.</li>
-</ul>
-
-<h3>
-<a id="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
-
-<ul>
-<li>Susana Simancas. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/Simancas_20140815.pdf?raw=true">Space Worms! Proyecto Uniandino Aeroespacial - PUA</a>
-</li>
-<li>Manuel Quiroga. Misión espacial bonaventuriana.</li>
-</ul>
-
-<h3>
-<a id="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
-
-<ul>
-<li>Diego Umaña. Supernova 2014J: cálculo de la distancia a M82 y crónica de una imagen única en Colombia.</li>
-</ul>
-
-<h3>
-<a id="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
-
-<ul>
-<li>Diana Meléndez. Formación de sistemas planetarios: primeras etapas y teorías. </li>
-<li>Juan Sebastián Barbosa. Binarias Espectroscópicas (Delta Capricornio).</li>
-</ul>
-
-<h3>
-<a id="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
-
-<ul>
-<li>Benjamin Oostra. Observaciones de la estrella AB Aurigae</li>
-<li>Juan Sebastián Prada.</li>
-<li>Juan Jose Flórez. </li>
-</ul>
-
-<h3>
-<a id="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
-
-<ul>
-<li>Luisa Fernanda Rodríquez. Descubrimiento de una estrella marrón.</li>
-<li>Andrea Buitrago. El violento nacimiento de las Estrellas de Neutrones: Una historia de explosiones, supernovas y neutrinos.</li>
-</ul>
-
-<h3>
-<a id="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
-
-<ul>
-<li>Lina Marcela Aragón.</li>
-<li>Esteban Pardo.</li>
-</ul>
-
-<h3>
-<a id="semana-9-septiembre-26" class="anchor" href="#semana-9-septiembre-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 26</h3>
-
-<p><strong>Semana de trabajo individual</strong></p>
-
-<h3>
-<a id="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
-
-<ul>
-<li>Jaime Forero. Una carreras astronómica (resumida).</li>
-<li>Nicolás Plaza Bermúdez. Vida: condiciones planetarias</li>
-</ul>
-
-<h3>
-<a id="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
-
-<ul>
-<li>Ana María Montes. Extinciones masivas y bamboleo de la Tierra.</li>
-<li>Ray Díaz. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/Diaz_20141010.pdf?raw=true">Medición del coeficiente de extinción atmosférica de Bogotá.</a>
-</li>
-<li>Andrés Peñaranda. </li>
-</ul>
-
-<h3>
-<a id="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
-
-<ul>
-<li>Juan David Araujo. Vikingos: mito y astronomía.</li>
-<li>Paola Castaño. Una etnografía sobre la Estación Espacial Internacional.</li>
-</ul>
-
-<h3>
-<a id="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
-
-<ul>
-<li>Andrés David Naranjo. La Anatomía de los Agujeros Negros.</li>
-<li>Luisa Prado. Adelanto del proyecto acerca de una estrella binaria. </li>
-<li>Tania Cifuentes. Fotos de un planeta comparadas para ver su movimiento.</li>
-</ul>
-
-<h3>
-<a id="semana-14-octubre-31" class="anchor" href="#semana-14-octubre-31" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 31</h3>
-
-<ul>
-<li>Juan Diego Soler (Postdoc IAS-Paris). PLANCK.</li>
-</ul>
-
-<h3>
-<a id="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
-
-<ul>
-<li>Santiago Saldarriaga. Analisis de la habitabilidad de estrellas formadas en el redshift 100&lt;(1+z)&lt;137</li>
-<li>David Henriquez. Fotos de la Estación Espacial Internacional.</li>
-</ul>
-
-<h3>
-<a id="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
-
-<ul>
-<li>Laura Ruíz. Material de outreach para ciegos (Sistema solar)</li>
-<li>Juan Carlos Burgos.</li>
-<li>Tania Cifuentes. </li>
-</ul>
-
-<h3>
-<a id="semana-17-noviembre-21" class="anchor" href="#semana-17-noviembre-21" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 17) Noviembre 21</h3>
-
-<p><strong>Sesión de presentación de los posters</strong></p>
 
 <h2>
 <a id="enlaces" class="anchor" href="#enlaces" aria-hidden="true"><span class="octicon octicon-link"></span></a>Enlaces</h2>
@@ -203,7 +133,7 @@
 <h2>
 <a id="formalidades" class="anchor" href="#formalidades" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
-<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
+<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 10% por asistencia y participación en clase, 30% por dar una charla, 30% por presentar un informe sobre el plan de un proyecto para hacer durante el semestre y sus avances y 30% por presentar en un poster los resultados del proyecto.</p>
 
 <h3>
 <a id="contacto" class="anchor" href="#contacto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contacto</h3>
